# pico-display

./: .gitignore  Dockerfile  README.md  dashboard.py  image_translate.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  poetry.yml
deploy/: cronjob.yaml
image_generators/: calevents.py  mail.py  utils.py  weather.py
waveshare/: epaper.py  load.py  main.py
